# airq-mcp-timeseries

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml  tests.yml
src/airq_mcp_timeseries/: __init__.py  errors.py
src/airq_mcp_timeseries/models/: __init__.py  capabilities.py  export.py  metrics.py  plot.py  query.py  series.py  style.py  summary.py
src/airq_mcp_timeseries/providers/: __init__.py  base.py
src/airq_mcp_timeseries/renderers/: __init__.py  matplotlib_renderer.py  plotly_renderer.py
src/airq_mcp_timeseries/services/: __init__.py  downsample.py  export.py  history.py  normalize.py  plot_model.py  resample.py  summarize.py
tests/: conftest.py  test_branch_coverage.py  test_downsample.py  test_export.py  test_history.py  test_plot_model.py  test_plotly_renderer.py  test_query_models.py  test_resample.py  test_summarize.py
